# Eclipse

./: .gitignore  CMakeLists.txt  makefile
src/: board.cpp  board.hpp  main.cpp  mutation.hpp  player.cpp  player.hpp  playerinclude.hpp  populationsquare.cpp  populationsquare.hpp  race.cpp  race.hpp  ship.cpp  ship.hpp  technology.cpp  technology.hpp  terminalinterface.cpp  terminalinterface.hpp  tile.hpp
src/races/: eridani.hpp  hydran.hpp  terrans.cpp  terrans.hpp
src/utilities/: coordinates.hpp  types.hpp
